# so_long

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  command_list.txt  conanfile.txt  main.c  scratch  so_long
include/: graphics.h  map.h  move.h  utils.h
maps/: cant_collect.ber  cant_exit.ber  large_valid_enemy.ber  large_valid_map.ber  no_collectables.ber  no_exit.ber  no_path_map.ber  not_a_box.ber  not_rectangular.ber  simple_valid_map.ber  too_many_exits.ber  verry_simple_map.ber
src/graphics/: draw_map.c  load_images.c
src/map/: check_map.c  check_path.c  collectable.c  find_coin.c  find_collectable.c  free_map.c  init_map.c  make_map.c  print.c  remove_collectable.c  validate_map.c
src/move/: directions.c  keys.c  move_player.c
src/utils/: free_map.c  queue_functions.c
test/: test.h  test_fish_status.c  test_main.c  test_map.cpp  test_map_data.c  test_read_map.c  test_valid_map.c
